Fixing layout bug

--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -72,7 +72,7 @@ $box-shadow: 0 2px 2px #ccc; // NEW_COLOUR
 }
 
 .inner-wrap {
-  height: 100vh;
+  // height: 100vh;
 }
 
 .content {
